[package]
name = "piper-server"
version = "1.0.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.22"
piper = { path = "../piper/" }
axum = { version = "0.8.4", features = [ "macros" ] }
tokio = { version = "1.47.1", features = [ "full" ] }
anyhow = "1.0.100"
tracing = "0.1.44"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = [ "derive" ] }
thiserror = "2.0.17"
dotenvy = "0.15.7"
tokio-util = { version = "0.7.18", features = ["io"] }
http-body-util = "0.1.3"
axum-extra = { version = "0.12.5", features = [ "typed-header" ] }
tokio-stream = "0.1.18"
bytes = "1.11.0"
futures = "0.3.31"
